--- a/opps/polls/locale/pt_BR/LC_MESSAGES/django.po
+++ b/opps/polls/locale/pt_BR/LC_MESSAGES/django.po
@@ -1,125 +1,126 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
+# josene <jsene@yacows.com.br>, 2013
+# Bruno Rocha <rochacbruno@gmail.com>, 2013
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: opps\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-18 11:57-0300\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2013-04-26 18:10+0000\n"
+"Last-Translator: josene <jsene@yacows.com.br>\n"
+"Language-Team: Portuguese (Brazil) <opps-developers@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: pt_BR\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: admin.py:49 admin.py:84
 msgid "Identification"
-msgstr ""
+msgstr "Identificação"
 
 #: admin.py:51
 msgid "Content"
-msgstr ""
+msgstr "Conteúdo"
 
 #: admin.py:53 admin.py:86
 msgid "Relationships"
-msgstr ""
+msgstr "Relacionamentos"
 
 #: admin.py:55 admin.py:88
 msgid "Publication"
-msgstr ""
+msgstr "Publicação"
 
 #: models.py:29
 msgid "Question"
-msgstr ""
+msgstr "Questão"
 
 #: models.py:31
 msgid "Allow multiple choices"
-msgstr ""
+msgstr "Permite multiplas opções"
 
 #: models.py:35
 msgid "Max number of selected choices"
-msgstr ""
+msgstr "Número máximo de opções selecionadas"
 
 #: models.py:40
 msgid "Min number of selected choices"
-msgstr ""
+msgstr "Número mínimo de opções selecionadas"
 
 #: models.py:45
 msgid "Display Choice images"
-msgstr ""
+msgstr "Exibir imagens das opções"
 
 #: models.py:49
 msgid "URL"
-msgstr ""
+msgstr "URL"
 
 #: models.py:54
 msgid "Headline"
-msgstr ""
+msgstr "Cabeçalho"
 
 #: models.py:68
 msgid "Poll Image"
-msgstr ""
+msgstr "Imagem da enquete"
 
 #: models.py:75
 msgid "End date"
-msgstr ""
+msgstr "Data de finalização"
 
 #: models.py:76 models.py:181 models.py:225
 msgid "Order"
-msgstr ""
+msgstr "Ordem"
 
 #: models.py:77
 msgid "Show results page"
-msgstr ""
+msgstr "Exibir página de resultados"
 
 #: models.py:149
 msgid "Poll Post"
-msgstr ""
+msgstr "Posts da enquete"
 
 #: models.py:157 models.py:223 models.py:246
 msgid "Poll"
-msgstr ""
+msgstr "Enquete"
 
 #: models.py:175
 msgid "Choice Image"
-msgstr ""
+msgstr "Imagem da opção"
 
 #: models.py:216
 msgid "Poll Box"
-msgstr ""
+msgstr "Box de enquete"
 
 #: models.py:233
 msgid "Poll not published!"
-msgstr ""
+msgstr "Enquete não publicada!"
 
 #: models.py:236
 msgid "Poll date_available is greater than today!"
-msgstr ""
+msgstr "Data de publicação da enquete é maior que a data atual!"
 
 #: views.py:182
 msgid "Poll not opened for voting"
-msgstr ""
+msgstr "Enquete não aberta para votações"
 
 #: views.py:188
 msgid "You already voted on this poll"
-msgstr ""
+msgstr "Você já votou nesta enquete"
 
 #: views.py:193
 msgid "You should select at least one option"
-msgstr ""
+msgstr "Você precisa selecionar pelo menos uma opção"
 
 #: views.py:207
 #, python-format
 msgid "You should select at least %s options"
-msgstr ""
+msgstr "Você precisa selecionar pelo menos %s opções"
 
 #: views.py:211
 #, python-format
 msgid "You can select only %s options"
-msgstr ""
+msgstr "Você só pode selecionar %s opções"
